3-apps/vaultwarden/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.vault2.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
    - match: Host(`vault2.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: russellhost-tls
